--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -1,1 +1,2 @@
-Repository for Tendermint blockchain development
+Repository for Tendermint blockchain development 
+v0.1 - Initial setup and deployment
